SIDP-27: Default relying-party.xml has SAML2-specific security policy rules included in SAML 1 security policies
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2769 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -28,3 +28,4 @@ Changes in Release 2.1.0
 [SIDP-224] - Add version information in library JAR manifest and provide command line tool to view it
 [SIDP-225] - Credential theft vulnerability in login.jsp
 [SIDP-226] - Cross site scripting vulnerability
+[SIDP-227] - Default relying-party.xml has SAML2-specific security policy rules included in SAML 1 security policies
