SIDP-216: Second of two signed sources of metadata fail after cache expiration
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2771 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -24,6 +24,7 @@ Changes in Release 2.1.0
 [SIDP-209] - Enforce SAML 2 metadata SPSSODescriptor/@AuthnRequestsSigned
 [SIDP-214] - Installer needs to put (at least) bcprov onto the calsspath before it runs ant
 [SIDP-215] - SHIB-JCE.jar missing from 2.1.0 kit
+[SIDP-216] - Second of two signed sources of metadata fail after cache expiration
 [SIDP-222] - Template engine used by LDAP and database connectors throw an NPE on startup
 [SIDP-224] - Add version information in library JAR manifest and provide command line tool to view it
 [SIDP-225] - Credential theft vulnerability in login.jsp
