--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -32,4 +32,5 @@ Changes in Release 2.1.0
 [SIDP-226] - Cross site scripting vulnerability
 [SIDP-227] - Default relying-party.xml has SAML2-specific security policy rules included in SAML 1 security policies
 [SIDP-228] - Improve error reporting in SAML 2 profile handlers when no encryption key is resolveable for the peer entity ID
+[SIDP-229] - IdP Metadata changes to KeyDescriptor not fully flushed from IdP cache
 [SIDP-230] - sanity check provided credentials
