--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -35,3 +35,4 @@ Changes in Release 2.1.0
 [SIDP-230] - sanity check provided credentials
 [SIDP-233] - Typo on operation name - public void setAuthenticationDurection(long duration)
 [SIDP-237] - Re-run of install.sh does not create war again
+[SIDP-242] - Cleanup StorageService entry classes
