--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+Changes in Release 2.1.1
+=============================================
+[SIDP-252] - IdPSessionFilter throws ArrayIndexOutOfBoundsException on validation of unexpected cookie
+
 Changes in Release 2.1.0
 =============================================
 [SIDP-20] - Cannot deploy on Windows. Spring and DOS device names?
