AuthenticationEngine::returnToAuthenticationEngine() static method called before servlet init() when clustered. - SIDP 250
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2807 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,5 +1,6 @@
 Changes in Release 2.1.1
 =============================================
+[SIDP-250] - AuthenticationEngine::returnToAuthenticationEngine() static method called before servlet init() when clustered.
 [SIDP-252] - IdPSessionFilter throws ArrayIndexOutOfBoundsException on validation of unexpected cookie
 
 Changes in Release 2.1.0
