--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,9 @@
+Changes in Release 2.1.2
+=============================================
+* Significant memory optimizations
+[SIDP-260] - NPE in login-err.jsp
+
+
 Changes in Release 2.1.1
 =============================================
 [SIDP-248] - Signing code in profile handlers and encoders should not just check that a signing credential is supplied, but that a signing key is available in that credential.
