Make IdP display its metadata when you hit the entity ID URL - SIDP-268
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2823 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -2,6 +2,7 @@ Changes in Release 2.1.2
 =============================================
 * Significant memory optimizations
 [SIDP-260] - NPE in login-err.jsp
+[SIDP-268] - Expose Metadata on entityID URL
 
 
 Changes in Release 2.1.1
