Fix metadata profile handler MIME type - SIDP-262
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2825 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -2,6 +2,7 @@ Changes in Release 2.1.2
 =============================================
 * Significant memory optimizations
 [SIDP-260] - NPE in login-err.jsp
+[SIDP-262] - MIME type on metadata profile handler is incorrect
 [SIDP-267] - check if cookies are set on error.jsp
 [SIDP-268] - Expose Metadata on entityID URL
 
