--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+Changes in Release 2.1.3
+=============================================
+[SIDP-247] - Log Exception in UP LoginHandler Servlet
+
 Changes in Release 2.1.2
 =============================================
 * Significant memory optimizations
