Quote principal name in database connector in example resolver file. - SIDP-276
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2834 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,6 +1,7 @@
 Changes in Release 2.1.3
 =============================================
 [SIDP-247] - Log Exception in UP LoginHandler Servlet
+[SIDP-276] - Example RDB Connector, quote principal
 [SIDP-280] - when an Idp has no outside (WAN) access Idp fails to collect or release attributes
 
 Changes in Release 2.1.2
