--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,6 +1,7 @@
 Changes in Release 2.1.3
 =============================================
 [SIDP-247] - Log Exception in UP LoginHandler Servlet
+[SIDP-263] - Suggest adding defaultSigningCredentialRef to the AnonymousRelyingParty element in the default config
 [SIDP-276] - Example RDB Connector, quote principal
 [SIDP-277] - Incorrect null check for request context in UsernamePasswordServlet
 [SIDP-280] - when an Idp has no outside (WAN) access Idp fails to collect or release attributes
