--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -6,6 +6,7 @@ Changes in Release 2.1.3
 [SIDP-277] - Incorrect null check for request context in UsernamePasswordServlet
 [SIDP-280] - when an Idp has no outside (WAN) access Idp fails to collect or release attributes
 [SIDP-285] - Use $IDP_SCOPE$ to populate IdP scope in conf-tmpl\attribute-resolver.xml
+[SIDP-291] - Update libs for 2.1.3 release
 
 Changes in Release 2.1.2
 =============================================
