Provide flags for retaining public and private user credentials, defaults to false so that they are always discarded Make UsernamePassword login handler alway retain the password as a private credential - SIDP-135
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2854 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -10,6 +10,7 @@ Changes in Release 2.1.3
 [SIDP-291] - Update libs for 2.1.3 release
 [SIDP-306] - Remove ClientCertAuth rule from SAML 2 SSO SecurityPolicy in relying-party.xml
 [SIDP-310] - Change default relying-party.xml settings for SAML 2 profiles' encryptNameIds parameter from "conditional" to "never"
+[SIDP-315] - Credential provided by UsernamePasswordLogin handler as attribute
 [SIDP-318] - IdP erroneously logs many normal events as errors
 [SIDP-322] - Exception thrown when SP requests a particular authentication method that is not configured
 
