--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -8,6 +8,7 @@ Changes in Release 2.1.3
 [SIDP-279] - IdP should log NameID for auditing
 [SIDP-285] - Use $IDP_SCOPE$ to populate IdP scope in conf-tmpl\attribute-resolver.xml
 [SIDP-291] - Update libs for 2.1.3 release
+[SIDP-292] - login.jsp: wrong using of the attribute rawspan within the tag <td>
 [SIDP-306] - Remove ClientCertAuth rule from SAML 2 SSO SecurityPolicy in relying-party.xml
 [SIDP-310] - Change default relying-party.xml settings for SAML 2 profiles' encryptNameIds parameter from "conditional" to "never"
 [SIDP-315] - Credential provided by UsernamePasswordLogin handler as attribute
