--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,21 +1,24 @@
 Changes in Release 2.1.3
 =============================================
+[SIDP-244] - Error message on invalid ACS could be improved
 [SIDP-247] - Log Exception in UP LoginHandler Servlet
 [SIDP-263] - Suggest adding defaultSigningCredentialRef to the AnonymousRelyingParty element in the default config
-[SIDP-261] - IPAddressLoginHandler addresses comparasion fails
+[SIDP-261] - IPAddressLoginHandler addresses comparison fails
 [SIDP-265] - Distinguish requested AuthMethod and default AuthMethod
 [SIDP-271] - AuthenticationEngine doesn't correctly handle passive return from login servlet
 [SIDP-276] - Example RDB Connector, quote principal
 [SIDP-277] - Incorrect null check for request context in UsernamePasswordServlet
 [SIDP-279] - IdP should log NameID for auditing
+[SIDP-281] - Customize login.jsp appearance based on relying party
 [SIDP-285] - Use $IDP_SCOPE$ to populate IdP scope in conf-tmpl\attribute-resolver.xml
 [SIDP-291] - Update libs for 2.1.3 release
-[SIDP-292] - login.jsp: wrong using of the attribute rawspan within the tag <td>
+[SIDP-292] - login.jsp: wrong using of the attribute rowspan within the tag <td>
 [SIDP-306] - Remove ClientCertAuth rule from SAML 2 SSO SecurityPolicy in relying-party.xml
 [SIDP-310] - Change default relying-party.xml settings for SAML 2 profiles' encryptNameIds parameter from "conditional" to "never"
 [SIDP-315] - Credential provided by UsernamePasswordLogin handler as attribute
 [SIDP-318] - IdP erroneously logs many normal events as errors
 [SIDP-322] - Exception thrown when SP requests a particular authentication method that is not configured
+[SIDP-324] - Add additional information to Status handler
 
 Changes in Release 2.1.2
 =============================================
