Make user session available via public API, finishes off SIDP-296 Add a few more example information items to login page
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2862 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -14,6 +14,7 @@ Changes in Release 2.1.3
 [SIDP-285] - Use $IDP_SCOPE$ to populate IdP scope in conf-tmpl\attribute-resolver.xml
 [SIDP-291] - Update libs for 2.1.3 release
 [SIDP-292] - login.jsp: wrong using of the attribute rowspan within the tag <td>
+[SIDP-296] - Make LoginContext / IdP Session availabe through the public API
 [SIDP-306] - Remove ClientCertAuth rule from SAML 2 SSO SecurityPolicy in relying-party.xml
 [SIDP-310] - Change default relying-party.xml settings for SAML 2 profiles' encryptNameIds parameter from "conditional" to "never"
 [SIDP-315] - Credential provided by UsernamePasswordLogin handler as attribute
