Remove TC config and place it on the wiki to be maintained - SIDP-348
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2889 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,8 @@
+Changes in Release 2.1.4
+=============================================
+[SIDP-340] - Default tc-config.xml causes TCNonPortableObjectError
+[SIDP-348] - Remove Terracotta Configuration from IdP Install
+
 Changes in Release 2.1.3
 =============================================
 [SIDP-244] - Error message on invalid ACS could be improved
