https://bugs.internet2.edu/jira/browse/SIDP-353
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2899 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+Changes in Release 2.1.5
+=============================================
+[SIDP-353] - Default login.jsp crashes on anonymous RPs
+
 Changes in Release 2.1.4
 =============================================
 [SIDP-340] - Default tc-config.xml causes TCNonPortableObjectError
