https://bugs.internet2.edu/jira/browse/SIDP-355
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2909 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -3,6 +3,7 @@ Changes in Release 2.2.0
 [SIDP-362] - Only log exception message without stack trace for expired SAML messages
 [SIDP-360] - Session isn't being set within the attribute request context during a SAML1 attribute query
 [SIDP-359] - HttpServletHelper.getRelyingPartyConfirmationManager misnamed
+[SIDP-355] - Idp reinstall from source overwrite some config files even when "no overwrite" is specified
 
 Changes in Release 2.1.5
 =============================================
