Expose login exception to login.jsp page in order to allow better message customization - SIDP-368
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2916 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,5 +1,6 @@
 Changes in Release 2.2.0
 =============================================
+[SIDP-368] - Provide more acurate login error to servlet when Username/Password login authentication has failed.
 [SIDP-365] - Expose uptime of IdP web application with status handler
 [SIDP-362] - Only log exception message without stack trace for expired SAML messages
 [SIDP-360] - Session isn't being set within the attribute request context during a SAML1 attribute query
