--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -6,6 +6,7 @@ Changes in Release 2.2.0
 [SIDP-360] - Session isn't being set within the attribute request context during a SAML1 attribute query
 [SIDP-359] - HttpServletHelper.getRelyingPartyConfirmationManager misnamed
 [SIDP-355] - Idp reinstall from source overwrite some config files even when "no overwrite" is specified
+[SIDP-275] - Using standard JAAS LoginException in UP LoginHandler servlet
 [SC-63] - Use XML Schema duration syntax instead of integers for duration configuration options
 
 Changes in Release 2.1.5
