fix typo in error msg - SIDP-384
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2926 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,5 +1,6 @@
 Changes in Release 2.2.0
 =============================================
+[SIDP-384] - Incorrect error message set for expired request in Shibboleth SSO Profile Handler
 [SIDP-379] - Usage of general AuthenticationException in UsernamePasswordLoginHandler
 [SIDP-373] - The SLF4J MDC state is not being properly cleared when request processing is done.
 [SIDP-368] - Provide more acurate login error to servlet when Username/Password login authentication has failed.
