--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -4,6 +4,7 @@ Changes in Release 2.2.0
 [SIDP-384] - Incorrect error message set for expired request in Shibboleth SSO Profile Handler
 [SIDP-382] - Less verbose logging for failed attribute queries due to missing name-id
 [SIDP-379] - Usage of general AuthenticationException in UsernamePasswordLoginHandler
+[SIDP-374] - Switch to use StaticBasicParserPool instead of BasicParserPool
 [SIDP-373] - The SLF4J MDC state is not being properly cleared when request processing is done.
 [SIDP-368] - Provide more acurate login error to servlet when Username/Password login authentication has failed.
 [SIDP-369] - Allow to have cookie Domain set for login context cookie
