Fix up unit test cases - SIDP-397 Update logging configuration files
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2934 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,5 +1,6 @@
 Changes in Release 2.2.0
 =============================================
+[SIDP-397] - Remove any unit test that won't be fixed in the 2.X branch, fix the rest
 [SIDP-388] - Add eduPersonAssurance attribute to attribute-resolver.xml config example
 [SIDP-384] - Incorrect error message set for expired request in Shibboleth SSO Profile Handler
 [SIDP-382] - Less verbose logging for failed attribute queries due to missing name-id
