Fix bug where previous session login handler was attempted to be used if all authentication methods expired but session was still alive - SIDP-396
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2941 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,6 +1,7 @@
 Changes in Release 2.2.0
 =============================================
 [SIDP-397] - Remove any unit test that won't be fixed in the 2.X branch, fix the rest
+[SIDP-396] - Previous session LoginHandler used even if authentication method has expired
 [SIDP-392] - NullPointerException in LoginContext when authentication method information is null
 [SIDP-388] - Add eduPersonAssurance attribute to attribute-resolver.xml config example
 [SIDP-386] - Session indexes not cleared when session is destroyed
