--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,5 +1,6 @@
 Changes in Release 2.2.0
 =============================================
+[SIDP-407] - Shibboleth SSO profile handler sets incorrect protocol string in outbound message context
 [SIDP-402] - Update 3rd party libraries for 2.2 release
 [SIDP-397] - Remove any unit test that won't be fixed in the 2.X branch, fix the rest
 [SIDP-396] - Previous session LoginHandler used even if authentication method has expired
