Check for null login context on the login.jsp and print an error that the login page can not be directly accessed. - SIDP-411 Also, make it even more clear that the provided login page is an example page
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2949 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,5 +1,6 @@
 Changes in Release 2.2.0
 =============================================
+[SIDP-411] - Check for loginContext != null at login.jsp
 [SIDP-409] - Pass IdP w/o authenticating
 [SIDP-407] - Shibboleth SSO profile handler sets incorrect protocol string in outbound message context
 [SIDP-402] - Update 3rd party libraries for 2.2 release
