ensure name identifier properly logged in audit log - SIDP-415
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2952 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,5 +1,6 @@
 Changes in Release 2.2.0
 =============================================
+[SIDP-415] - SAML name identifier value not logged in audit log
 [SIDP-411] - Check for loginContext != null at login.jsp
 [SIDP-409] - Pass IdP w/o authenticating
 [SIDP-407] - Shibboleth SSO profile handler sets incorrect protocol string in outbound message context
