Fix case where name identifier wasn't logged - SIDP-415 Fix metadata provider observer leak - SIDP-416
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2954 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,5 +1,6 @@
 Changes in Release 2.2.0
 =============================================
+[SIDP-416] - MetadataProviderObserver leak, new one added on every login
 [SIDP-415] - SAML name identifier value not logged in audit log
 [SIDP-413] - Change link of example login page
 [SIDP-411] - Check for loginContext != null at login.jsp
