SIDP-421 - Error logging SOAP queries
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2958 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+Changes in Release 2.2.1
+=============================================
+[SIDP-421] - Error logging SOAP queries
+
 Changes in Release 2.2.0
 =============================================
 [SIDP-416] - MetadataProviderObserver leak, new one added on every login
