Fix attribute query profile handlers such that exceptions that occur during attribute resolution do not lead to an NPE - SIDP-250
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2971 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -10,6 +10,7 @@ Changes in Release 2.2.1
 [SIDP-432] - Set explicit caching headers on redirects
 [SIDP-436] - Null AuthnContextClassRef causes NPE
 [SIDP-447] - Fix for SIDP-417 missed RemoteUserLoginHandler
+[SIDP-450] - NPE with AttributeQueryProfile when there are errors resolving attributes
 
 Changes in Release 2.2.0
 =============================================
