add SIDP-433 to release notes
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2977 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -7,6 +7,7 @@ Changes in Release 2.2.1
 [SIDP-427] - Incorrect handling of returned authn error in SSO profile handlers
 [SIDP-428] - Address lifecycle issues around use of MetadataCredentialResolverFactory
 [SIDP-431] - Typo in default attribute-resolver.xml
+[SIDP-433] - Update libs for 2.2.1
 [SIDP-434] - More Typos in Default attribute-resolver.xml
 [SIDP-432] - Set explicit caching headers on redirects
 [SIDP-435] - Different principal used for index into session storage and transient ID
