prevent cast class exception if a user starts a SAML 1 flow, leaves in the middle, then starts a SAML 2 flow (or vice versa) - SIDP-438
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2980 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -12,6 +12,7 @@ Changes in Release 2.2.1
 [SIDP-432] - Set explicit caching headers on redirects
 [SIDP-435] - Different principal used for index into session storage and transient ID
 [SIDP-436] - Null AuthnContextClassRef causes NPE
+[SIDP-438] - Improve user experience when switching versions of SAML
 [SIDP-443] - Profile handlers override encoder nameQualifier setting
 [SIDP-447] - Fix for SIDP-417 missed RemoteUserLoginHandler
 [SIDP-450] - NPE with AttributeQueryProfile when there are errors resolving attributes
