support overriding certificate lifetime by means of an environment option - SIDP-286
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2981 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,5 +1,6 @@
 Changes in Release 2.2.1
 =============================================
+[SIDP-286] - Configurable validity period for self signed certificate
 [SIDP-417] - Shib deployed to root web context, SSOProfileHandler forwards to "/null/AuthnEngine"
 [SIDP-421] - Error logging SOAP queries
 [SIDP-422] - aacli.sh Exception in thread "main" 
