SIDP-429 - Limit metadata SP credential resolution for encryption to RSA keys only
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2985 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+Changes in Release 2.3.0
+=============================================
+[SIDP-429] - Limit metadata SP credential resolution for encryption to RSA keys only
+
 Changes in Release 2.2.1
 =============================================
 [SIDP-286] - Configurable validity period for self signed certificate
