[SIDP-472] Eschew class local state in taglib code
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2998 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -8,6 +8,7 @@ Changes in Release 2.3.0
 [SIDP-464] - An SPNameQualifier in NameIDPolicy always treated as an affiliation
 [SIDP-468] - Add taglib to simplify rendering login pages.
 [SIDP-469] - eduPersonTargetedID Could Be Separately Commented
+[SIDP-471] - Taglibs appear to be caching SP information
 
 Changes in Release 2.2.1
 =============================================
