SIDP-482: add encoder calls to default error pages
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@3014 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -16,6 +16,7 @@ Changes in Release 2.3.0
 [SIDP-475] - Better login page for IdP
 [SIDP-478] - ECP profile support
 [SIDP-480] - Update POM to add plugin versions, use / publish to Shib.net Repo, and attach generated source and Javadocs
+[SIDP-482] - JSP pages should HTML-encode any strings they handle
 
 Changes in Release 2.2.1
 =============================================
