SIDP-488: PeerEntityId property not set on SAML queries
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@3026 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -20,6 +20,7 @@ Changes in Release 2.3.0
 [SIDP-483] - Log Completed, Unencrypted SAML Assertion
 [SIDP-485] - <img> inside HTML pages must have alt attribute.[SIDP-486] - login.jsp page contains old wiki link
 [SIDP-487] - More login.jsp changes (CR/LF issues, missing period)
+[SIDP-488] - PeerEntityId property not set on SAML queries
 
 Changes in Release 2.2.1
 =============================================
