https://issues.shibboleth.net/jira/browse/SIDP-504 Alt text generate for logo has mismatched quoting
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@3057 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,5 @@
+[SIDP-504] - Alt text generate for logo has mismatched quoting
+
 Changes in Release 2.3.2
 =============================================
 [SIDP-500] - shibboleth-identityprovider-2.3.1 installer broken on Windows 7 (64-bit) and Windows XP
