Make 2.3.3 exist (rev the pom and add the title to the release notes)
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@3059 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,5 @@
+Changes in Release 2.3.3
+=============================================
 [SIDP-504] - Alt text generate for logo has mismatched quoting
 
 Changes in Release 2.3.2
