Rev POM up to 2.3.3-SNAPSHOT https://issues.shibboleth.net/jira/browse/SIDP-514 Alt text for IdP Logos is not esapiEncoder.encodeForHTMLAttribute https://issues.shibboleth.net/jira/browse/SIDP-513 idpui taglib could look for more languages matches
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@3065 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,3 +1,8 @@
+Changes in Release 2.3.4
+=============================================
+[SIDP-513] idpui taglib could look for more languages matches
+[SIDP-514] Alt text for IdP Logos is not esapiEncoder.encodeForHTMLAttribute
+
 Changes in Release 2.3.3
 =============================================
 [SIDP-504] - Alt text generate for logo has mismatched quoting
