Remove use of EntitiesDescriptor names from example config files - SIDP-522 Fix up XML formatting that was undone when doing SVN mime-type and line ending conversion
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@3070 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -1,8 +1,9 @@
 Changes in Release 2.3.4
 =============================================
-[SIDP-516] Example login.jsp / Usage of label tag
-[SIDP-513] idpui taglib could look for more languages matches
-[SIDP-514] Alt text for IdP Logos is not esapiEncoder.encodeForHTMLAttribute
+[SIDP-516] - Example login.jsp / Usage of label tag
+[SIDP-513] - idpui taglib could look for more languages matches
+[SIDP-514] - Alt text for IdP Logos is not esapiEncoder.encodeForHTMLAttribute
+[SIDP-522] - supplied examples shouldn't promote federation URIs as relying parties
 
 Changes in Release 2.3.3
 =============================================
